# projet-final-cicd

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/api/: database.py  main.py  models.py  routes.py  schemas.py
src/tests/: conftest.py  test_health.py  test_notes.py
tests/: conftest.py  test_notes.py
